--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 100%;
 }
 
 .logo {
   height: 6em;
-  padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
@@ -16,6 +15,11 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+.logo img{
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes logo-spin {
@@ -39,4 +43,8 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.d-flex {
+  display: flex;
 }
